Implement code review comments